﻿0.7.0 [TBD]
[-] Drop IUnitOfWork support.
[+] SourceLink support.

0.4.0 [2017-08-13]
[*] Repository class update according latest domain interface.

0.3.0 [2017-08-07]
[*] Force return result (ToList) for repository methods.
[+] Async repository implementation.

0.2.1 [2017-07-11]
[*] Fix reference to Domain assembly.

0.2.0 [2017-07-10]
[+] Initial release.