@@ -1,0 +1,42 @@
+﻿// Copyright (c) 2015-2019, Saritasa. All rights reserved.
+// Licensed under the BSD license. See LICENSE file in the project root for full license information.
+
+using System;
+using System.Data.Entity;
+using System.Linq;
+using System.Threading;
+using System.Threading.Tasks;
+using Saritasa.Tools.Common.Pagination;
+
+namespace Saritasa.Tools.EF.Pagination
+{
+    /// <summary>
+    /// Class contains Entity Framework related static methods for
+    /// <see cref="TotalCountList{T}" /> and is intended to simplify instantiation and better API.
+    /// </summary>
+    public static class EFTotalCountListFactory
+    {
+        /// <summary>
+        /// Creates list with total count from queryable source.
+        /// The calling will evaluate query automatically.
+        /// </summary>
+        /// <typeparam name="T">Item type.</typeparam>
+        /// <param name="source">Queryable enumerable.</param>
+        /// <param name="cancellationToken">The token to monitor for cancellation requests.</param>
+        /// <returns>Total count list.</returns>
+        public static async Task<TotalCountList<T>> FromSourceAsync<T>(
+            IQueryable<T> source,
+            CancellationToken cancellationToken = default)
+        {
+            if (source == null)
+            {
+                throw new ArgumentNullException(nameof(source));
+            }
+
+            return new TotalCountList<T>(
+                await source.ToListAsync(cancellationToken),
+                await source.CountAsync(cancellationToken)
+            );
+        }
+    }
+}
