@@ -19,10 +19,12 @@
       <group targetFramework="net461">
         <dependency id="Microsoft.EntityFrameworkCore" version="[2.0.0, )" />
         <dependency id="Saritasa.Tools.Domain" version="[0.7.0, )" />
+        <dependency id="Saritasa.Tools.Common" version="[3.0.0, )" />
       </group>
       <group targetFramework="netstandard2.0">
         <dependency id="Microsoft.EntityFrameworkCore" version="[2.0.0, )" />
         <dependency id="Saritasa.Tools.Domain" version="[0.7.0, )" />
+        <dependency id="Saritasa.Tools.Common" version="[3.0.0, )" />
       </group>
     </dependencies>
     <frameworkAssemblies>
